--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,30 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<p id="notice"></p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+          <div class="text-center">
+            <div class="display-1 fst-italic">Agrin Work</div>
+        　</div>
+        </div>
+    </div>
+            <p></p>
+            <p></p>
+    <div class="row">
+        <div class="col-md-12">
+          <div class="text-center">
+              <h4>気軽に楽しく農業体験</h4>
+              <h4>あなたの働きたいスタイルで</h4>
+              <h4>お小遣いを稼ぎながら農業をしてみませんか</h4>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+          <div class="text-center">
+            <%= link_to "利用者はこちら", about_path, class: "btn btn-outline-secondary btn-lg" %>
+
+          </div>
+        </div>
+    </div>
+</div>
