--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,117 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+
+<body class="d-flex flex-column vh-100">
+    <header class="shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+          <a class="navbar-brand" href="/"><span>Agrin Work</span></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+
+
+
+            <ul class="navbar-nav ml-auto">
+
+              <% if admin_signed_in? %>
+               <li>
+                 <%= link_to "商品一覧", homes_top_path, class: "btn btn-outline-secondary" %>
+               </li>
+               <li>
+                <%= link_to "会員一覧", homes_top_path, class: "btn btn-outline-secondary" %>
+               </li>
+
+               <li>
+                 <%= link_to "注文履歴一覧", homes_top_path, class: "btn btn-outline-secondary" %>
+               </li>
+               <li>
+                 <%= link_to "ジャンル一覧", homes_top_path, class: "btn btn-outline-secondary" %>
+               </li>
+
+               <li>
+                 <%= link_to "ログアウト", homes_top_path, class: "btn btn-outline-secondary" %>
+               </li>
+              <% elsif customer_signed_in? %>
+              <li class="mr-5">
+                ようこそ！<%= current_customer.first_name %>さん
+              </li>
+               <li>
+                 <%= link_to "マイページ", homes_top_path, class: "btn btn-outline-secondary" %>
+               </li>
+               <li>
+                 <%= link_to "商品一覧", homes_top_path, class: "btn btn-outline-secondary" %>
+               </li>
+               <li>
+                 <%= link_to "カート", homes_top_path, class: "btn btn-outline-secondary" %>
+               </li>
+               <li>
+                 <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-outline-secondary" %>
+               </li>
+
+               <% elsif farmer_signed_in? %>
+               <li>
+                 <%= link_to "マイページ", homes_top_path, class: "btn btn-outline-secondary" %>
+               </li>
+               <li>
+                 <%= link_to "商品一覧", homes_top_path, class: "btn btn-outline-secondary" %>
+               </li>
+               <li>
+                 <%= link_to "カート", homes_top_path, class: "btn btn-outline-secondary" %>
+               </li>
+               <li>
+                 <%= link_to "ログアウト", destroy_farmer_session_path, method: :delete, class: "btn btn-outline-secondary" %>
+               </li>
+               <% else %>
+               <li>
+                 <%= link_to "登録・ログイン", about_path, class: "btn btn-outline-secondary" %>
+               </li>
+
+
+              <% end %>
+
+
+
+
+            </ul>
+        </div>
+      </nav>
+    </header>
+  <main class="mb-auto">
     <%= yield %>
+  </main>
+
+    <footer class="bg-dark text-white pt-5 pb-4">
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <p>気軽に楽しく農業体験</p>
+            <%= image_tag('no_image.jpg') %>
+          </div>
+          <div class="col-md-8">
+            <h6 class="text-white mt-2 mb-3">Link</h6>
+            <ul class="p-0 list-unstyled">
+              <li>
+                <a href="" title="About" class="text-white-50">会社概要</a>
+              </li>
+              <li>
+                <a href="" title="License informations" class="text-white-50">プライバシーポリシー</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
+
+
