--- a/app/views/customer/customers/show.html.erb
+++ b/app/views/customer/customers/show.html.erb
@@ -1,2 +1,37 @@
-<h1>Customer::Customers#show</h1>
-<p>Find me in app/views/customer/customers/show.html.erb</p>
+<p id="notice"></p>
+  <div class="container">
+
+
+    <p></p>
+
+    <div class="row">
+      <div class="col-md-2 offset-2">
+        <h2 class="p-2 border border-info border-start-0 rounded-5 text-center">登録情報</h2>
+      </div>
+      <div class="col-md-4 offset-4">
+      <%= link_to '編集する', customers_mypage_edit_path(@customer), class: "btn btn-success btn-lg" %>
+      </div>
+    </div>
+
+    <p></p>
+
+    <div class="row">
+      <div class="col-md-4 offset-1">
+        <%= image_tag @customer.get_customers_image,size: "300x300" %>
+      </div>
+
+      <div class="col-md-6">
+        <table class="table table-bordered table-hover" >
+          <tr><th class="table-active">利用者名</th><td><%= @customer.first_name %><%= @customer.last_name %></td></tr>
+          <tr><th class="table-active">フリガナ</th><td><%= @customer.first_name_kana %><%= @customer.last_name_kana %></td></tr>
+          <tr><th class="table-active">メールアドレス</th><td><%= @customer.email %></td></tr>
+          <tr><th class="table-active">性別</th><td><%= @customer.gender_i18n %></td></tr>
+          <tr><th class="table-active">年齢</th><td><%= @customer.age %>歳</td></tr>
+          <tr><th class="table-active">郵便番号</th><td><%= @customer.postal_code %></td></tr>
+          <tr><th class="table-active">住所</th><td><%= @customer.address %></td></tr>
+          <tr><th class="table-active">電話番号</th><td><%= @customer.telephone_number %></td></tr>
+
+        </table>
+      </div>
+    </div>
+  </div>
