[add]farmer farmer show/edit

--- a/app/views/customer/customers/edit.html.erb
+++ b/app/views/customer/customers/edit.html.erb
@@ -10,7 +10,7 @@
     <%= form_with model: @customer, url: customers_mypage_path do |f| %>
     <div class="row">
     <div class="col-md-2 py-3 offset-2">
-      商品画像
+      利用者画像
     </div>
     <div class="col-md-5 py-3">
       <%= f.file_field :customers_image, accept: "image/*" %>
