--- a/app/views/customer/customers/show.html.erb
+++ b/app/views/customer/customers/show.html.erb
@@ -5,10 +5,10 @@
     <p></p>
 
     <div class="row">
-      <div class="col-md-2 offset-2">
-        <h2 class="p-2 border border-info border-start-0 rounded-5 text-center">登録情報</h2>
+      <div class="col-md-4 offset-2">
+        <h2 class="p-2 border border-info border-start-0 rounded-5 text-center">利用者マイページ情報</h2>
       </div>
-      <div class="col-md-4 offset-4">
+      <div class="col-md-4 offset-2">
       <%= link_to '編集する', customers_mypage_edit_path(@customer), class: "btn btn-success btn-lg" %>
       </div>
     </div>
