--- a/app/views/farmer/farmers/edit.html.erb
+++ b/app/views/farmer/farmers/edit.html.erb
@@ -1,2 +1,61 @@
-<h1>Farmer::Farmers#edit</h1>
-<p>Find me in app/views/farmer/farmers/edit.html.erb</p>
+<p id="notice"></p>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 offset-2">
+        <h1>生産者マイページ編集</h1>
+      </div>
+    </div>
+
+
+    <%= form_with model: @farmer, url: farmers_mypage_path do |f| %>
+    <div class="row">
+    <div class="col-md-2 py-3 offset-2">
+      生産者画像
+    </div>
+    <div class="col-md-5 py-3">
+      <%= f.file_field :farmers_image, accept: "image/*" %>
+    </div>
+    <div class="col-md-2 py-3 offset-2">
+      生産者名
+    </div>
+    <div class="col-md-6 py-3">
+      <%= f.text_field :name, class:"w-75" %>
+    </div>
+    <div class="col-md-2 py-3 offset-2">
+      フリガナ
+    </div>
+    <div class="col-md-6 py-3">
+      <%= f.text_field :name_kana, class:"w-75" %>
+    </div>
+    <div class="col-md-2 py-3 offset-2">
+      メールアドレス
+    </div>
+    <div class="col-md-5 py-3">
+      <%= f.text_field :email, class:"w-100" %>
+    </div>
+    <div class="col-md-2 py-3 offset-2">
+      郵便番号
+    </div>
+    <div class="col-md-5 py-3">
+      <%= f.text_field :postal_code %>
+    </div>
+    <div class="col-md-2 py-3 offset-2">
+      住所
+    </div>
+    <div class="col-md-5 py-3">
+      <%= f.text_field :address %>
+    </div>
+    <div class="col-md-2 py-3 offset-2">
+      電話番号
+    </div>
+    <div class="col-md-8 py-3">
+      <%= f.text_field :telephone_number %>
+    </div>
+    <div class="col text-center">
+      <%= f.submit '変更を保存', class: "btn btn-success btn-lg" %>
+    </div>
+    <p></p>
+   </div>
+   <p></p>
+  <% end %>
+</div>
