[add]farmer/job_offer view new

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,2 +1,9 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+.radio_button_label {
+  margin-right: 2rem;
+}
+.radio_button_input {
+  margin-right: 1rem;
+}
