--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,7 +79,7 @@
                  <%= link_to "求人一覧", homes_top_path, class: "btn btn-outline-secondary" %>
                </li>
                <li>
-                 <%= link_to "マイページ", farmers_mypage_path, class: "btn btn-outline-secondary" %>
+                 <%= link_to "マイページ", farmer_farmers_mypage_path, class: "btn btn-outline-secondary" %>
                </li>
                <li>
                  <%= link_to "ログアウト", destroy_farmer_session_path, method: :delete, class: "btn btn-outline-secondary" %>
