--- a/app/views/farmer/farmers/edit.html.erb
+++ b/app/views/farmer/farmers/edit.html.erb
@@ -7,7 +7,7 @@
     </div>
 
 
-    <%= form_with model: @farmer, url: farmers_mypage_path do |f| %>
+    <%= form_with model: @farmer, url: farmer_farmers_mypage_path do |f| %>
     <div class="row">
     <div class="col-md-2 py-3 offset-2">
       生産者画像
