--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,7 @@
                  <%= link_to "求人投稿", homes_top_path, class: "btn btn-outline-secondary" %>
                </li>
                <li>
-                 <%= link_to "求人一覧", homes_top_path, class: "btn btn-outline-secondary" %>
+                 <%= link_to "求人一覧", farmer_job_offers_path, class: "btn btn-outline-secondary" %>
                </li>
                <li>
                  <%= link_to "マイページ", farmer_farmers_mypage_path, class: "btn btn-outline-secondary" %>
