--- a/app/views/farmer/job_offers/index.html.erb
+++ b/app/views/farmer/job_offers/index.html.erb
@@ -31,11 +31,8 @@
         <p></p>
         募集状況：<%= job_offer.job_status_i18n %><br>
       </div>
-      <div class="col-md-1">
-        <%= link_to '詳細', farmer_job_offer_path(job_offer.id), class: "btn btn-primary" %>
-      </div>
-      <div class="col-md-1">
-      <%= link_to '削除', farmer_job_offer_path(job_offer.id), method: :patch, "data-confirm" => "本当に消しますか?",  class: "btn btn-danger" %>
+      <div class="col-md-2">
+        <%= link_to '詳細', farmer_job_offer_path(job_offer.id), class: "btn btn-primary btn-lg" %>
       </div>
 
     </div>
