--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,7 +73,7 @@
                  <%= link_to "レビュー一覧", homes_top_path, class: "btn btn-outline-secondary" %>
                </li>
                <li>
-                 <%= link_to "求人投稿", homes_top_path, class: "btn btn-outline-secondary" %>
+                 <%= link_to "求人投稿", new_farmer_job_offer_path, class: "btn btn-outline-secondary" %>
                </li>
                <li>
                  <%= link_to "求人一覧", farmer_job_offers_path, class: "btn btn-outline-secondary" %>
