--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
                  <%= link_to "履歴", homes_top_path, class: "btn btn-outline-secondary" %>
                </li>
                <li>
-                 <%= link_to "求人一覧", homes_top_path, class: "btn btn-outline-secondary" %>
+                 <%= link_to "求人一覧", job_offers_path, class: "btn btn-outline-secondary" %>
                </li>
                <li>
                  <%= link_to "マイページ", customers_mypage_path, class: "btn btn-outline-secondary" %>
