[add]customer/reservation view information thanx

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -7,3 +7,10 @@
 .radio_button_input {
   margin-right: 1rem;
 }
+
+main {
+	background:radial-gradient(#fff, #99FF99);
+	height: auto;
+	border: 1px solid #333;
+}
+
