--- a/app/javascript/stylesheets/customers.scss
+++ b/app/javascript/stylesheets/customers.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the customer/customers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.box5{
+    padding: 8px 19px;
+    margin: 2em 0;
+    color: #2c2c2f;
+    background: #cde4ff;
+    border-top: solid 3px #5989cf;
+    border-bottom: solid 3px #5989cf;
+}
