--- a/app/views/farmer/job_offers/index.html.erb
+++ b/app/views/farmer/job_offers/index.html.erb
@@ -1,9 +1,10 @@
 <p id="notice"></p>
   <div class="container">
     <div class="row">
-      <div class="col-md-8 offset-md-1">
-        <h2>生産者求人一覧</h2>
-      </div>
+        <div class="col-md-8 offset-md-1">
+          <h2>生産者求人一覧</h2>
+        </div>
+
 
       <div class="col-md-2 offset-md-1">
         <%= link_to new_farmer_job_offer_path do %>
@@ -11,6 +12,7 @@
         <% end %>
       </div>
     </div>
+
 
 
     <% @job_offers.each do |job_offer| %>
@@ -22,9 +24,11 @@
       <div class="col-md-3" >
         作業名：<%= job_offer.job_name %><br>
         <p></p>
-        日付：<%= job_offer.day %><br>
+        日付：<%= l job_offer.day,format: :long %><br>
         <p></p>
         地区：<%= job_offer.area_i18n %><br>
+        <p></p>
+        求人形態：<%= job_offer.job_form_i18n %><br>
       </div>
       <div class="col-md-2">
         勤務時間：<%= job_offer.job_time %>時間<br>
@@ -42,3 +46,4 @@
 
     </div>
     <% end %>
+  </div>
