--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
                  <%= link_to "レビュー一覧", homes_top_path, class: "btn btn-outline-secondary" %>
                </li>
                <li>
-                 <%= link_to "履歴", homes_top_path, class: "btn btn-outline-secondary" %>
+                 <%= link_to "予約履歴", reservations_path, class: "btn btn-outline-secondary" %>
                </li>
                <li>
                  <%= link_to "求人一覧", job_offers_path, class: "btn btn-outline-secondary" %>
