--- a/app/views/customer/reservations/index.html.erb
+++ b/app/views/customer/reservations/index.html.erb
@@ -31,7 +31,7 @@
         募集状況：<%= reservation.job_offer.job_status_i18n %><br>
       </div>
       <div class="col-md-3">
-        <%= link_to '詳細を見る',  reservation_path(reservation.job_offer.id), class: "btn btn-primary btn-lg" %>
+        <%= link_to '詳細を見る',  reservation_path(reservation.id), class: "btn btn-primary btn-lg" %>
       </div>
 
     </div>
