[add]customer/customer_review customer_star

--- a/app/javascript/stylesheets/customers.scss
+++ b/app/javascript/stylesheets/customers.scss
@@ -9,3 +9,17 @@
     border-top: solid 3px #5989cf;
     border-bottom: solid 3px #5989cf;
 }
+
+.box6{
+    padding: 8px 19px;
+    margin: 2em 0;
+    border-bottom: solid 3px #5989cf;
+}
+
+.search_form{
+    padding: 8px 19px;
+    margin: 2em 0;
+    background: #EEEEEE;
+    border: solid 3px #5989cf;
+    border-radius: 50px;
+}
