--- a/app/views/customer/reservations/index.html.erb
+++ b/app/views/customer/reservations/index.html.erb
@@ -21,7 +21,7 @@
         <p></p>
         地区：<%= reservation.job_offer.area_i18n %><br>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-2">
         求人形態：<%= reservation.job_offer.job_form_i18n %><br>
         <p></p>
         勤務時間：<%= reservation.job_offer.job_time %>時間<br>
@@ -30,8 +30,11 @@
         <p></p>
         募集状況：<%= reservation.job_offer.job_status_i18n %><br>
       </div>
-      <div class="col-md-3">
-        <%= link_to '詳細を見る',  reservation_path(reservation.id), class: "btn btn-primary btn-lg" %>
+      <div class="col-md-2">
+        <%= link_to '詳細を見る',  reservation_path(reservation.id), class: "btn btn-primary" %>
+      </div>
+      <div class="col-md-2">
+        <%= link_to 'レビューする',  new_job_offer_customer_review_path(reservation.job_offer.id), class: "btn btn-danger" %>
       </div>
 
     </div>
