--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
                 ようこそ！<%= current_farmer.name %>さん
               </li>
                <li>
-                 <%= link_to "レビュー一覧", homes_top_path, class: "btn btn-outline-secondary" %>
+                 <%= link_to "レビュー一覧", farmer_customer_reviews_path, class: "btn btn-outline-secondary" %>
                </li>
                <li>
                  <%= link_to "求人投稿", new_farmer_job_offer_path, class: "btn btn-outline-secondary" %>
