--- a/app/views/customer/reservations/index.html.erb
+++ b/app/views/customer/reservations/index.html.erb
@@ -34,7 +34,11 @@
         <%= link_to '詳細を見る',  reservation_path(reservation.id), class: "btn btn-primary" %>
       </div>
       <div class="col-md-2">
-        <%= link_to 'レビューする',  new_job_offer_customer_review_path(reservation.job_offer.id), class: "btn btn-danger" %>
+
+        <% unless reservation.job_offer.customer_reviews.where(customer_id: current_customer.id).exists? %>
+          
+          <%= link_to 'レビューする',  new_job_offer_customer_review_path(reservation.job_offer.id), class: "btn btn-danger" %>
+        <%end%>
       </div>
 
     </div>
