--- a/app/views/farmer/job_offers/show.html.erb
+++ b/app/views/farmer/job_offers/show.html.erb
@@ -72,9 +72,13 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-2 offset-5">
+      <div class="col-md-2 offset-3">
         <%= link_to "編集する", edit_farmer_job_offer_path(@job_offer.id), class: "btn btn-success btn-lg" %>
       </div>
+      <div class="col-md-2 offset-2">
+        <%= link_to "予約者一覧", farmer_job_offer_reservations_index_path(@job_offer.id), class: "btn btn-primary btn-lg" %>
+      </div>
+
     </div>
 
     <p></p>
